crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud_catalog_tpch_simple_q3_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q3"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                       |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                                         |
|               |   Federated                                                                                                                                                                                                                                                                                                |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                   |
|               |   Projection: tpch.tpch.lineitem.l_comment, tpch.tpch.lineitem.l_partkey                                                                                                                                                                                                                                   |
|               |     Sort: tpch.tpch.lineitem.l_linenumber DESC NULLS FIRST                                                                                                                                                                                                                                                 |
|               |       Projection: tpch.tpch.lineitem.l_comment, tpch.tpch.lineitem.l_partkey, tpch.tpch.lineitem.l_linenumber                                                                                                                                                                                              |
|               |         TableScan: tpch.tpch.lineitem projection=[l_partkey, l_linenumber, l_comment]                                                                                                                                                                                                                      |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                                         |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                                       |
|               |     VirtualExecutionPlan name=spice.ai compute_context=<CONNECTION> sql=SELECT l_comment, l_partkey FROM tpch.tpch.lineitem ORDER BY l_linenumber DESC NULLS FIRST LIMIT 10 rewritten_sql=SELECT "l_comment", "l_partkey" FROM "spice"."tpch"."lineitem" ORDER BY "l_linenumber" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                            |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
