crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud_catalog_tpch_simple_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q4"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |   Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |   Sort: tpch.tpch.lineitem.l_quantity DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |     Projection: avg(tpch.tpch.lineitem.l_tax), tpch.tpch.lineitem.l_linenumber, tpch.tpch.lineitem.l_quantity                                                                                                                                                                                                                                                                                                                                                                |
|               |       Aggregate: groupBy=[[tpch.tpch.lineitem.l_linenumber, tpch.tpch.lineitem.l_quantity]], aggr=[[avg(tpch.tpch.lineitem.l_tax)]]                                                                                                                                                                                                                                                                                                                                          |
|               |         TableScan: tpch.tpch.lineitem projection=[l_linenumber, l_quantity, l_tax]                                                                                                                                                                                                                                                                                                                                                                                           |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |     VirtualExecutionPlan name=spice.ai compute_context=<CONNECTION> sql=SELECT avg(lineitem.l_tax), l_linenumber, l_quantity FROM tpch.tpch.lineitem GROUP BY lineitem.l_linenumber, lineitem.l_quantity ORDER BY l_quantity DESC NULLS FIRST LIMIT 10 rewritten_sql=SELECT avg("lineitem"."l_tax"), "l_linenumber", "l_quantity" FROM "spice"."tpch"."lineitem" GROUP BY "lineitem"."l_linenumber", "lineitem"."l_quantity" ORDER BY "l_quantity" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
