crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__spicecloud_catalog_tpch_simple_q7_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q7"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                     |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                       |
|               |   Federated                                                                                                                                                                                                                                                                              |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                 |
|               |   Projection: c.key                                                                                                                                                                                                                                                                      |
|               |     SubqueryAlias: c                                                                                                                                                                                                                                                                     |
|               |       Projection: tpch.tpch.orders.o_orderkey AS key                                                                                                                                                                                                                                     |
|               |         Limit: skip=0, fetch=10                                                                                                                                                                                                                                                          |
|               |           Projection: tpch.tpch.orders.o_orderkey                                                                                                                                                                                                                                        |
|               |             TableScan: tpch.tpch.orders projection=[o_orderkey]                                                                                                                                                                                                                          |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                       |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                     |
|               |     VirtualExecutionPlan name=spice.ai compute_context=<CONNECTION> sql=SELECT c."key" FROM (SELECT o_orderkey FROM tpch.tpch.orders LIMIT 10) AS c (key) LIMIT 10 rewritten_sql=SELECT "c"."key" FROM (SELECT "o_orderkey" FROM "spice"."tpch"."orders" LIMIT 10) AS "c" (key) LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                          |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
